--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/tunnel": "0.0.1",
+    "release-it": "^14.4.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
   },
